--- a/src/main/resources/templates/403.html
+++ b/src/main/resources/templates/403.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
-      <title>Spring Boot</title>
+    <title>Access Denied</title>
 </head>
 <body>
-   <h3>Access Denied Exception</h3>
-   <div>
-	    Logged in user: <b th:inline="text"  class="user"> [[${#httpServletRequest.remoteUser}]] </b>
-	    <form th:action="@{/app-logout}" method="POST">
-	         <input type="submit" value="Logout"/>
-	    </form>
-   </div> 	 
-    <p class="error" th:text="${errorMsg}">Error</p>
+<h3>Access Denied</h3>
+<div>
+    <p th:text="${errorMsg}">You do not have permission to access this page.</p>
+    <p>Logged in user: <b th:inline="text" th:text="${username}">User</b></p>
+    <form th:action="@{/app-logout}" method="POST">
+        <input type="submit" value="Logout"/>
+    </form>
+</div>
 </body>
-</html>   
+</html>
