--- a/src/main/resources/templates/curvePoint/add.html
+++ b/src/main/resources/templates/curvePoint/add.html
@@ -14,7 +14,7 @@
 	</div>
 
 	<div class="row">
-		<form action="#" th:action="@{/curvePoint/validate}" th:object="${curvePoint}" method="post" class="form-horizontal" style="width: 100%">
+		<form action="#" th:action="@{/curvePoint/validate}" th:object="${curvePointEntity}" method="post" class="form-horizontal" style="width: 100%">
 			<div class="form-group">
 				<label for="term" class="col-sm-2 control-label">Term</label>
 				<div class="col-sm-10">
