--- a/src/main/resources/templates/curvePoint/list.html
+++ b/src/main/resources/templates/curvePoint/list.html
@@ -17,7 +17,7 @@
 			<a href="/ruleName/list">Rule</a>
 		</div>
 		<div class="col-6 text-right">
-			Logged in user: <b th:inline="text"  class="user"> Mettre le machin de connexion ici </b>
+			Logged in user: <b th:inline="text"  class="user" th:text="${username}">User</b>
 			<form th:action="@{/app-logout}" method="POST">
 				<input type="submit" value="Logout"/>
 			</form>
@@ -37,14 +37,14 @@
 				</tr>
 			</thead>
 			<tbody>
-				<tr th:each="curvePoint : ${curvePoints}">
-					<td style="width: 10%" th:text="${curvePoint.id}"></td>
-					<td th:text="${curvePoint.id}"></td>
-					<td th:text="${curvePoint.term}"></td>
-					<td th:text="${curvePoint.value}"></td>
+				<tr th:each="curvePointEntity : ${curvePoints}">
+					<td style="width: 10%" th:text="${curvePointEntity.id}"></td>
+					<td th:text="${curvePointEntity.id}"></td>
+					<td th:text="${curvePointEntity.term}"></td>
+					<td th:text="${curvePointEntity.value}"></td>
 					<td style="width: 15%" class="text-center">
-						<a th:href="@{/curvePoint/update/{id}(id=${curvePoint.id})}">Edit</a>&nbsp;|&nbsp;
-						<a th:href="@{/curvePoint/delete/{id}(id=${curvePoint.id})}">Delete</a>
+						<a th:href="@{/curvePoint/update/{id}(id=${curvePointEntity.id})}">Edit</a>&nbsp;|&nbsp;
+						<a th:href="@{/curvePoint/delete/{id}(id=${curvePointEntity.id})}">Delete</a>
 					</td>
 				</tr>
 			</tbody>
