--- a/src/main/resources/templates/rating/list.html
+++ b/src/main/resources/templates/rating/list.html
@@ -17,7 +17,8 @@
 			<a href="/ruleName/list">Rule</a>
 		</div>
 		<div class="col-6 text-right">
-			Logged in user: <b th:inline="text"  class="user"> Mettre le machin de connexion ici </b>
+			Logged in user: <b th:inline="text" class="user" th:text="${username}">User</b>
+
 			<form th:action="@{/app-logout}" method="POST">
 				<input type="submit" value="Logout"/>
 			</form>
@@ -38,15 +39,15 @@
 				</tr>
 			</thead>
 			<tbody>
-				<tr th:each="rating : ${ratings}">
-					<td style="width: 10%" th:text="${rating.id}"></td>
-					<td th:text="${rating.moodysRating}"></td>
-					<td th:text="${rating.sandPRating}"></td>
-					<td th:text="${rating.fitchRating}"></td>
-					<td th:text="${rating.orderNumber}"></td>
+				<tr th:each="ratingEntity : ${ratings}">
+					<td style="width: 10%" th:text="${ratingEntity.id}"></td>
+					<td th:text="${ratingEntity.moodysRating}"></td>
+					<td th:text="${ratingEntity.sandPRating}"></td>
+					<td th:text="${ratingEntity.fitchRating}"></td>
+					<td th:text="${ratingEntity.orderNumber}"></td>
 					<td style="width: 15%" class="text-center">
-						<a th:href="@{/rating/update/{id}(id=${rating.id})}">Edit</a>&nbsp;|&nbsp;
-						<a th:href="@{/rating/delete/{id}(id=${rating.id})}">Delete</a>
+						<a th:href="@{/rating/update/{id}(id=${ratingEntity.id})}">Edit</a>&nbsp;|&nbsp;
+						<a th:href="@{/rating/delete/{id}(id=${ratingEntity.id})}">Delete</a>
 					</td>
 				</tr>
 			</tbody>
